--- a/dotfiles/.gitignore
+++ b/dotfiles/.gitignore
@@ -1,21 +1,30 @@
-Session.vim
-*/**/tags
-tags
-rerun_personas_migrations_100
-plugin/ri_vim_cache/
-.DS_Store
-.ruby-version
-.java-version
-cider-ci/bin/install_rbenv_version.rb
 *.retry
+*/**/tags
+.DS_Store
+.DS_Store
+.cpcache
 .ctags
-database_pg.yml
-plugin/applescript/*
-tmp/
 .eslintrc
-node_modules/
+.java-version
 .mux.yml
+.nrepl-history
+.nrepl-port
+.pryrc
+.ruby-version
+Session.vim
+cider-ci/bin/install_rbenv_version.rb
+database_pg.yml
 dev-repl
-test-repl
 dev-server
-mock
+int-test-repl
+int-test-server
+my-scripts/
+node_modules/
+plugin/applescript/*
+plugin/ri_vim_cache/
+rerun_personas_migrations_100
+run-spec
+tags
+test-repl
+test-server
+tmp/
