--- a/dotfiles/.inputrc
+++ b/dotfiles/.inputrc
@@ -1,4 +1,5 @@
 set editing-mode vi
+set keymap vi-command
 # set show-mode-in-prompt on
 # set vi-ins-mode-string "(ins) "
 # set vi-cmd-mode-string "(cmd) "
