--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -10,6 +10,7 @@ set -g focus-events on
 
 # enables cursor shape change in nvim insert mode
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+# set -sa terminal-overrides ',xterm-256color:Tc'
 
 bind s choose-tree -Ns
 
@@ -53,10 +54,11 @@ set -g @tpm_plugins '                    \
 # git@bitbucket.com/user/plugin  \
 
 set -g @colors-solarized 'dark'
+# set -g @continuum-save-interval '120'
 set -g @resurrect-processes 'false'
 set -g @resurrect-restore 'R'
 set -g @resurrect-save 'S'
-# set -g @resurrect-save-bash-history 'on'
+set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 
 # workaround for regression in Mac OSX Sierra in regards to broken clipboard
