--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -7,6 +7,7 @@ set -sg escape-time 0
 set -g prefix C-space
 set -g mouse on
 set -g focus-events on
+set-option -g status-right "%H:%M %d-%b-%y"
 
 # enables cursor shape change in nvim insert mode
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
@@ -53,7 +54,7 @@ set -g @tpm_plugins '                    \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
 
-set -g @colors-solarized 'dark'
+# set -g @colors-solarized 'dark'
 # set -g @continuum-save-interval '120'
 set -g @resurrect-processes 'false'
 set -g @resurrect-restore 'R'
