--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -7,7 +7,7 @@ set -sg escape-time 0
 set -g prefix C-space
 set -g mouse on
 set -g focus-events on
-set-option -g status-right "%H:%M %d-%b-%y"
+set-option -g status-right "%H:%M | %d-%b-%y"
 
 # enables cursor shape change in nvim insert mode
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
