--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -66,14 +66,15 @@ set -g @resurrect-strategy-nvim 'session'
 # set -g default-shell $SHELL 
 # set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
-# Initializes TMUX plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
-
 # Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
 # setw -g aggressive-resize off
 
 # override seebi/tmux-colors-solarized
-# set -g @colors-solarized 'light'
+set -g @colors-solarized 'light'
 # set -g pane-border-fg default
 # set -g pane-active-border-fg default
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
+
