--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -11,9 +11,10 @@ set-option -g status-right "%H:%M | %d-%b-%y"
 
 # enables cursor shape change in nvim insert mode
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
-# set -sa terminal-overrides ',xterm-256color:Tc'
+set -sa terminal-overrides ',screen-256color:RGB'
+# set -sa terminal-overrides ',screen-256color:Tc'
 
-bind s choose-tree -Ns
+# bind s choose-tree -Ns
 
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
