--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -14,7 +14,7 @@ set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 set -sa terminal-overrides ',screen-256color:RGB'
 # set -sa terminal-overrides ',screen-256color:Tc'
 
-# bind s choose-tree -Ns
+bind s choose-tree -Ns -O name
 
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
