--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -45,6 +45,7 @@ set -g status-left-length 50
 # Supports `github_username/repo` or full git repo URLs
 set -g @tpm_plugins '                    \
   seebi/tmux-colors-solarized            \
+  catppuccin/tmux                        \
   tmux-plugins/tpm                       \
   tmux-plugins/tmux-resurrect            \
   tmux-plugins/tmux-sensible             \
@@ -70,8 +71,27 @@ set -g @resurrect-strategy-nvim 'session'
 # Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
 # setw -g aggressive-resize off
 
+# set -g @catppuccin_flavour "mocha" # or frappe, macchiato, mocha
+set -g @catppuccin_flavour "$CATPPUCCIN_FLAVOUR" # or frappe, macchiato, mocha
+
+# set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+
+set -g @catppuccin_window_number_position "left"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_window_status_enable "yes"
+set -g @catppuccin_window_status_icon_enable "yes"
+
+set -g @catppuccin_icon_window_last "󰖰"
+
 # override seebi/tmux-colors-solarized
-set -g @colors-solarized 'light'
+# set -g @colors-solarized 'light'
 # set -g pane-border-fg default
 # set -g pane-active-border-fg default
 
