--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -6,25 +6,31 @@ set -g prefix C-space
 set -g mouse on
 set -g focus-events on
 set-option -g status-right "%H:%M | %d-%b-%y"
+set-option -g -s set-clipboard on
 
 # enables cursor shape change in nvim insert mode
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 set -sa terminal-overrides ',screen-256color:RGB'
+
+set -s copy-command 'pbcopy'
 
 bind s choose-tree -Ns -O name
 
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
+bind-key ] run "pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-# copying and pasting using system clipboard
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# and mouse selection uses copy-pipe too
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# and pasting from clipboard via pbpaste
-bind-key ] run "pbpaste | tmux load-buffer - && tmux paste-buffer"
-# bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# # copying and pasting using system clipboard
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# # and mouse selection uses copy-pipe too
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# # and pasting from clipboard via pbpaste
+# bind-key ] run "pbpaste | tmux load-buffer - && tmux paste-buffer"
+# # bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # start numbering of windows with 1
 set -g base-index 1
@@ -38,13 +44,18 @@ set -g status-left-length 50
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
+# set -g @tpm_plugins '                    \
+#   catppuccin/tmux                        \
+#   seebi/tmux-colors-solarized            \
+#   tmux-plugins/tpm                       \
+#   tmux-plugins/tmux-resurrect            \
+#   tmux-plugins/tmux-sensible             \
+#   tmux-plugins/tmux-yank                 \
+# '
 set -g @tpm_plugins '                    \
   catppuccin/tmux                        \
-  seebi/tmux-colors-solarized            \
   tmux-plugins/tpm                       \
   tmux-plugins/tmux-resurrect            \
-  tmux-plugins/tmux-sensible             \
-  tmux-plugins/tmux-yank                 \
 '
 
 # Other examples:
