--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -3,30 +3,6 @@
 	email = matuskmit1@gmail.com
         signingkey = A7D4C7D0AA8CF012
 
-; [guitool "Rebase onto..."]
-;         cmd = git rebase
-;         revprompt = yes
-; [guitool "Rebase/Continue"]
-;         cmd = git rebase --continue
-; [guitool "Rebase/Skip"]
-;         cmd = git rebase --skip
-; [guitool "Rebase/Abort"]
-;         cmd = git rebase --abort
-; [guitool "Pull with Rebase"]
-;         cmd = git pull --rebase
-
-; [guitool "Stash/Push"]
-;         cmd = git stash
-; [guitool "Stash/Pop"]
-;         cmd = git stash pop
-; [guitool "Stash/List"]
-;         cmd = git stash list
-
-; [gui]
-;         fontui = -family \"DejaVu Sans Mono\" -size 10 -weight normal -slant roman -underline 0 -overstrike 0
-;         fontdiff = -family \"DejaVu Sans Mono\" -size 10 -weight normal -slant roman -underline 0 -overstrike 0
-;         recentrepo = /home/nimaai/src/leihs
-
 [alias]
         dno = diff --name-only
 [alias]
@@ -36,7 +12,7 @@
 [alias]
         dsb = diff --submodule=diff --no-ext-diff
 [alias]
-        dom = diff --ext-diff
+        dom = diff --ext-diff origin/master
 [alias]
         c = commit
 [alias]
@@ -57,12 +33,8 @@
         cpc = cherry-pick --continue
 [alias]
         patch = "!f() { git add . && git can && git psf; }; f"
-; [alias]
-;         rmu = "!f() { git status --porcelain | cut -f 2- -d \" \" | xargs rmtrash; }; f"
 [alias]
         s = status --ignore-submodules=untracked
-; [alias]
-;         sa = status
 [alias]
         sw = switch
 [alias]
@@ -77,10 +49,6 @@
         rt = restore
 [alias]
         a = add
-; [alias]
-;         co = checkout
-; [alias]
-;         cos = "!f() { git checkout $1 && git submodule update --init --recursive; }; f"
 [alias]
         b = branch
 [alias]
@@ -101,8 +69,6 @@
         l = log
 [alias]
         lp = log --graph --decorate --pretty=oneline --abbrev-commit -10
-; [alias]
-;         lpfp = log --graph --decorate --pretty=oneline --abbrev-commit --first-parent -10
 [alias]
         last = log --graph --decorate --pretty=oneline --abbrev-commit -1
 [alias]
@@ -139,30 +105,10 @@
         rh = reset --hard
 [alias]
         rhom = reset --hard origin/master
-; [alias]
-;         rmbom = "!f() { git reset $(git merge-base HEAD origin/master); }; f"
-; [alias]
-;         rhmbom = "!f() { git reset --hard $(git merge-base HEAD origin/master); }; f"
-; [alias]
-;         rsuo = remote set-url origin
-; [alias]
-;         suball = submodule foreach git pull -q origin master
-; [alias]
-;         suball = submodule foreach git pull -q origin master
-; [alias]
-;         su = submodule update
 [alias]
         sur = submodule update --recursive
-; [alias]
-;         suf = submodule update --force
 [alias]
         suri = submodule update --recursive --init
-; [alias]
-;         uiau = update-index --assume-unchanged
-; [alias]
-;         uinau = update-index --assume-unchanged
-; [alias]
-;         ss = stash save
 [alias]
         sh = show --ext-diff
 [alias]
@@ -195,58 +141,22 @@
         diff = auto
         status = auto
 
-; [color "branch"]
-;         current = yellow reverse
-;         local = yellow
-;         remote = green
-
-; [color "diff"]
-;         meta = bold
-;         frag = magenta bold
-;         old = red
-;         new = green
-
 [color "status"]
         added = yellow
         changed = blue
         untracked = cyan
 
-; [diff]
-;         tool = nvim -d
-; [difftool]
-;         prompt = false
-; [difftool "vimdiff"]
-;         cmd = nvim -d $LOCAL $REMOTE
-; [merge]
-;         tool = nvim -d
-; [mergetool]
-;         prompt = false
-; [mergetool "vimdiff"]
-;         cmd = nvim -d $BASE $LOCAL $REMOTE
 [core]
         editor = nvim
 	excludesfile = /Users/nitaai/.gitignore
 [push]
         default = current
         recurseSubmodules = on-demand
-; [branch]
-;         autosetuprebase = always
-; [difftool "sourcetree"]
-; 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-; 	path = 
-; [mergetool "sourcetree"]
-; 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-; 	trustExitCode = true
 
 [commit]
         gpgsign = true
 [gpg]
 	program = /usr/local/bin/gpg
-; [status]
-; 	submodulesummary = true
-; [mergetool "fugitive"]
-; 	; cmd = vim -f -c \"Gdiff\" \"$MERGED\"
-;         cmd = nvim -d $BASE $LOCAL $REMOTE
 [remote "origin"]
 	prune = true
 [pull]
@@ -255,3 +165,5 @@
 	helper = cache
 [diff]
 	external = difft
+[mergetool "vimdiff"]
+        layout = REMOTE,BASE,LOCAL
