--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -69,8 +69,8 @@ set -g @resurrect-save 'S'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 
-# set -g @catppuccin_flavour "mocha" # or frappe, macchiato, mocha
-set -g @catppuccin_flavour "$CATPPUCCIN_FLAVOUR" # or frappe, macchiato, mocha
+# set -g @catppuccin_flavor "mocha" # or frappe, macchiato, mocha
+set -g @catppuccin_flavor "$CATPPUCCIN_FLAVOUR" # or frappe, macchiato, mocha
 
 # set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
@@ -79,8 +79,7 @@ set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_icon_enable "yes"
+set -g @catppuccin_window_status "icon"
 set -g @catppuccin_icon_window_last "󰖰"
 
 # Initializes TMUX plugin manager.
