--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,5 +1,12 @@
+##################################################
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'niksingh710/minimal-tmux-status'
+##################################################
+
 setw -g mode-keys vi
 set -g default-command fish
+set -g default-terminal "tmux-256color"
 set -g status-keys vi
 set -sg escape-time 0
 set -g prefix C-space
@@ -14,8 +21,11 @@ set -sa terminal-overrides ',screen-256color:RGB'
 
 set -s copy-command 'pbcopy'
 
+unbind r
+bind r source-file ~/.tmux.conf
 bind s choose-tree -Ns -O name
 
+bind-key b set-option status
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
@@ -24,44 +34,13 @@ bind-key ] run "pbpaste | tmux load-buffer - && tmux paste-buffer"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
-# # copying and pasting using system clipboard
-# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# # and mouse selection uses copy-pipe too
-# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# # and pasting from clipboard via pbpaste
-# bind-key ] run "pbpaste | tmux load-buffer - && tmux paste-buffer"
-# # bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
-# start numbering of windows with 1
 set -g base-index 1
-# start numbering of panes with 1
 setw -g pane-base-index 1
 
-# Highlight last window
 set -g window-status-last-style fg=default,italics
-# set the maximum of the left component of the status bar
 set -g status-left-length 50
 
-# List of plugins
-# Supports `github_username/repo` or full git repo URLs
-# set -g @tpm_plugins '                    \
-#   catppuccin/tmux                        \
-#   seebi/tmux-colors-solarized            \
-#   tmux-plugins/tpm                       \
-#   tmux-plugins/tmux-resurrect            \
-#   tmux-plugins/tmux-sensible             \
-#   tmux-plugins/tmux-yank                 \
-# '
-set -g @tpm_plugins '                    \
-  catppuccin/tmux                        \
-  tmux-plugins/tpm                       \
-  tmux-plugins/tmux-resurrect            \
-'
-
-# Other examples:
-# github_username/plugin_name    \
-# git@github.com/user/plugin     \
-# git@bitbucket.com/user/plugin  \
+set -g @minimal-tmux-bg "#698DDA"
 
 set -g @resurrect-processes 'false'
 set -g @resurrect-restore 'R'
@@ -69,20 +48,6 @@ set -g @resurrect-save 'S'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 
-# set -g @catppuccin_flavor "mocha" # or frappe, macchiato, mocha
-set -g @catppuccin_flavor "$CATPPUCCIN_FLAVOUR" # or frappe, macchiato, mocha
-
-# set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_status "icon"
-set -g @catppuccin_icon_window_last "󰖰"
-
-# Initializes TMUX plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
-
+##################################################
+run '~/.tmux/plugins/tpm/tpm'
+##################################################
