--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -165,5 +165,7 @@
 	helper = cache
 [diff]
 	external = difft
+[merge]
+        ff = true
 [mergetool "vimdiff"]
         layout = REMOTE,BASE,LOCAL
