--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,7 +1,8 @@
 ##################################################
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'niksingh710/minimal-tmux-status'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 ##################################################
 
 setw -g mode-keys vi
@@ -12,7 +13,7 @@ set -sg escape-time 0
 set -g prefix C-space
 set -g mouse on
 set -g focus-events on
-set-option -g status-right "%H:%M | %d-%b-%y"
+# set-option -g status-right "%H:%M | %d-%b-%y"
 set-option -g -s set-clipboard on
 
 # enables cursor shape change in nvim insert mode
@@ -41,6 +42,9 @@ set -g window-status-last-style fg=default,italics
 set -g status-left-length 50
 
 set -g @minimal-tmux-bg "#698DDA"
+# set -g @minimal-tmux-status-right-extra " | Continuum status: #{continuum_status}"
+
+set -g @continuum-save-interval '15'
 
 set -g @resurrect-processes 'false'
 set -g @resurrect-restore 'R'
