--- a/dotfiles/.gitignore
+++ b/dotfiles/.gitignore
@@ -1,12 +1,12 @@
-*.retry
-*/**/tags
+_vim-dadbod
+.claude/
 .clj-kondo/
-.DS_Store
-.DS_Store
 .cpcache
 .ctags
-.eslintrc
+.DS_Store
+.DS_Store
 .envrc
+.eslintrc
 .java-version
 .lsp/
 .mux.yml
@@ -16,11 +16,12 @@
 .ruby-version
 .venv
 .yardoc/
-Session.vim
-_vim-dadbod
+*.retry
+*/**/tags
 cider-ci/bin/install_rbenv_version.rb
-database.yml
+CLAUDE.md
 database_pg.yml
+database.yml
 dev-repl
 dev-server
 dev-watch
@@ -33,6 +34,7 @@ plugin/applescript/*
 plugin/ri_vim_cache/
 rerun_personas_migrations_100
 run-spec
+Session.vim
 shadow-cljs.vim
 tags
 test-repl
