--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -16,6 +16,13 @@ Host *
 
 # Leihs #######################################
 
+Host demo.leihs.zhdk.ch
+  ProxyJump ci-gw.zhdk.ch
+  Hostname zhdk-leihs-demo.ruby.zhdk.ch
+Host demo-leihs
+  ProxyJump ci-gw.zhdk.ch
+  Hostname zhdk-leihs-demo.ruby.zhdk.ch
+
 Host test.leihs.zhdk.ch
   ProxyJump ci-gw.zhdk.ch
   Hostname zhdk-leihs-test.ruby.zhdk.ch
@@ -39,10 +46,10 @@ Host staging-leihs
 
 Host leihs.zhdk.ch
   ProxyJump ci-gw.zhdk.ch
-  Hostname zhdk-leihs-prod-v6.ruby.zhdk.ch
+  Hostname zhdk-leihs-prod.ruby.zhdk.ch
 Host prod-leihs
   ProxyJump ci-gw.zhdk.ch
-  Hostname zhdk-leihs-prod-v6.ruby.zhdk.ch
+  Hostname zhdk-leihs-prod.ruby.zhdk.ch
 
 Host nimaai-leihs
   ProxyJump ci-gw.zhdk.ch
@@ -100,11 +107,24 @@ Host ci-ax101-05
   Hostname 65.109.66.137
 Host ci-ax101-06
   Hostname 65.109.66.138
+Host ci-ax101-07
+  Hostname 65.109.64.58
+Host ci-ax101-08
+  Hostname 65.109.69.181
 
 # CI on-prem
 Host ci-executor-madek-2024
   Hostname ci-executor-madek.ruby.zhdk.ch
+# Host ci-executor-leihs
+#   Hostname ci-executor-leihs.ruby.zhdk.ch
 
 # Functional Hosts
 Host *.leihs.app
+  Port 2828
+Host *.functional.swiss
+  Port 2828
+Host leihs.uni-muster.ch
+  Port 2828
+Host ausleihe.hslu.ch
+  Port 9966
   Port 2828
