--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -2,6 +2,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'omerxx/tmux-floax'
 ##################################################
 
 setw -g mode-keys vi
@@ -21,6 +22,8 @@ set -sa terminal-overrides ',screen-256color:RGB'
 
 set -s copy-command 'pbcopy'
 
+unbind p
+bind p previous-window
 unbind r
 bind r source-file ~/.tmux.conf
 bind s choose-tree -Ns -O name
@@ -47,6 +50,9 @@ set -g @resurrect-restore 'R'
 set -g @resurrect-save 'S'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
+
+set -g @floax-bind 'f'
+set -g @floax-bind-menu 'F'
 
 ##################################################
 run '~/.tmux/plugins/tpm/tpm'
